# pyrrhic-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: engine_adapter.rs  lib.rs  tablebases.rs  tbprobe.rs  tests.rs
